2006-04-21  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.9.9.5 pre-release

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Use black pattern for default video source
	* pitivi/ui/timeline.py:
	Don't show the timeline label at the left of the timeline window.
	* pitivi/ui/viewer.py:
	Don't add more than once the bins in the combobox.

2006-04-21  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/mainwindow.py:
	Make the Viewer take the remaining space, rather than the sourcelist.
	* pitivi/ui/sourcefactories.py:
	The minimum width of the source list is set to 300pixels.

2006-04-21  Andy Wingo  <wingo@pobox.com>

	* pitivi/objectfactory.py (FileSourceFactory.__gproperties__): Fix
	range of "length" pspec.

	* configure.ac: Remove calls to libtool.

	* autogen.sh: Update to simplify, not run libtoolize.

	* bin/Makefile.am: No need for the makefile rule any more.

	* configure.ac: Output bin/pitivi using AC_CONFIG_FILES, so that
	we can make it executable directly after the configure.

	* configure.ac: Fix the gnonlin check FO REAL.

	* bin/pitivi.in (CONFIGURED_PYTHONPATH): Update for PYTHONPATH
	name change.
	(_add_pitivi_path): If a path in the configured pythonpath is
	already in sys.path, leave it where it is.

	* configure.ac: Fix embarrassing errors in checks for cairo,
	glade, gtk cairo support, and gnonlin. Rename PYTHONPATH subst'ed
	var to CONFIGURED_PYTHONPATH.

	* configure.ac: Remove check for obsolete pygtk version that
	doesn't meet our requirements.

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	Remember previous state before scrubbing, so we can go back to that
	state (playing or paused).
	Should fix #338064

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Format default error messages in a saner way.

2006-04-20  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Moved getRealVideoSink(), record() and stopRecording() methods up from